improve contrast of help button in header. fixes #10388
improve contrast and readability of help link in header by
changing its color from orange to white. this exceeds the
4.5:1 contrast ratio recommended by WCAG.

test plan:
  * log into canvas and verify that the help link is now displayed
    in white.

Reviewed-on: https://gerrit.instructure.com/13539
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/_variables.sass
+++ b/app/stylesheets/_variables.sass
@@ -53,5 +53,5 @@ $silver-gradient-top: #ededed
 $silver-gradient-bottom: #c4c4c4
 
 
-$help-link-color: #ffa500
+$help-link-color: #fff
 $masquerade-link-color: #ffa500
